# tiny-sha

./: CMakeLists.txt  README.md  makefile  tiny_sha.c  tiny_sha.h
src/: makefile  test_sha.c  tiny_sha.c  tiny_sha.h
test/: sha_test.c
